CB-22477 - Removed global flag for automatic terms and conditions enablement
This commit removes the global flag as since its initial implementation,
an account level setting has been introduced, making the global flag
obsolete and unnecessary.